test_data/end_to_end/err__mismatching_struct_value_field_type/stderr.txt
error: mismatching types in struct `Foo` field `foo`: expected `String`, found `?integer`
  --> main.cz:6:16
6 |     Foo { foo: 42, bar: "foo" };
                   ~~

error: mismatching types in struct `Foo` field `bar`: expected `i32`, found `String`
  --> main.cz:6:25
6 |     Foo { foo: 42, bar: "foo" };
                            ~~~~~

error: mismatching types in struct `Tuple` field `0`: expected `{}`, found `String`
  --> main.cz:14:13
14 |     Tuple { "foo", 42 };
                 ~~~~~

error: mismatching types in struct `Tuple` field `1`: expected `String`, found `?integer`
  --> main.cz:14:20
14 |     Tuple { "foo", 42 };
                        ~~

error: mismatching types: expected `{bar: String, foo: i32}`, found `{bar: ?integer, foo: String}`
  --> main.cz:21:9
21 |     } = {
             ~

error: mismatching types: expected `{String, i32}`, found `{?integer, String}`
  --> main.cz:31:9
31 |     } = {
             ~
